# uv-k1-k5v3-firmware-custom

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile-ms  Dockerfile-slim  README.md  compile-with-docker.sh  requirements.txt
App/: CMakeLists.txt  am_fix.c  audio.c  audio.h  bitmaps.c  board.c  dcs.c  frequencies.c  functions.c  main.c  misc.c  misc.h  radio.c  radio.h  scheduler.c  scheduler.h  screenshot.c  settings.c  settings.h
App/app/: action.c  action.h  aircopy.c  app.c  ardf.c  ardf.h  breakout.c  breakout.h  chFrScanner.c  common.c  dtmf.c  flashlight.c  fm.c  fm.h  generic.c  keyboard_state.h  main.c  menu.c  spectrum.c  spectrum.h  uart.c  uart.h
App/driver/: backlight.c  bk1080.c  bk4819-regs.h  bk4819.c  bk4829.c  eeprom_compat.c  flash.h  gpio.h  i2c.c  keyboard.c  py25q16.c  py25q16.h  st7565.c  st7565.h  systick.c  uart.c  vcp.c  vcp.h  voice.c  voice.h
App/helper/: battery.c  battery.h  boot.c
App/ui/: ardf.c  ardf.h  helper.c  main.c  main.h  menu.c  menu.h  status.c  ui.c  ui.h  welcome.c
App/usb/: usb_config.h  usbd_cdc_if.c
Core/: CMakeLists.txt  py32f071xb.ld  startup_py32f071xx.s
Core/Inc/: py32f071_it.h
Core/Src/: main.c  py32f071_it.c  system_py32f071.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/PY32F071_HAL_Driver/: CMakeLists.txt
Drivers/PY32F071_HAL_Driver/Src/: py32f071_hal.c  py32f071_ll_adc.c  py32f071_ll_utils.c
Middlewares/: CMakeLists.txt
chirp_module/: f4hwn.ARDF.chirp.v5.1.0.py  f4hwn.chirp.v4.3.py
cmake/: gcc-arm-none-eabi.cmake
serialtool/: _dump.py  _prog.py
(+2 files in other folders)
